...
    app:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/math_level_id"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="210dp"
...
            android:outlineProvider="none"
            android:text="@string/Math_Button"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/math_level_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="226dp"
...
